[package]
name = "published-sdk-test"
version = "0.1.0"
edition = "2021"

[dependencies]
switchboard-on-demand-client = "=0.2.2"
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
solana-program = "=1.18.26"
tokio = { version = "^1.39", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
bs58 = "0.4"